effects range calibration

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
               <!--------------------------------------------------------------------->
               <!-- Filters -->
               <!--------------------------------------------------------------------->
-              <div id="filters">
-                <p id="filters-title" class="subtitle">Filters</p>
-                <div id="filters-content">
+              <!-- <div id="filters"> -->
+                <!-- <p id="filters-title" class="subtitle">Filters</p> -->
+                <!-- <div id="filters-content"> -->
                   <!--------------------------------------------------------------------->
-                  <!-- Low-Pass Filter -->
+                  <!-- High/Low-Pass Filter -->
                   <!--------------------------------------------------------------------->
-                  <div id="high-low-pass">
+                  <!-- <div id="high-low-pass">
                     <p id="high-low-pass-title" class="subtitle-s">
                       High/Low Pass
                     </p>
@@ -104,12 +104,12 @@
                         High-Pass Cutoff
                       </p>
                     </div>
-                  </div>
+                  </div> -->
                   <!--------------------------------------------------------------------->
                   <!-- Auto Filter -->
                   <!--------------------------------------------------------------------->
                   <div id="auto-filter">
-                    <p id="auto-filter-title" class="subtitle-s">Auto Filter</p>
+                    <p id="auto-filter-title" class="subtitle">Auto Filter</p>
                     <div id="auto-filter-content">
                       <div id="auto-filter-toggle"></div>
                       <div class="component">
@@ -134,8 +134,8 @@
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>
+                <!-- </div> -->
+              <!-- </div> -->
 
               <!--------------------------------------------------------------------->
               <!-- Feedback Delay -->
