--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!--------------------------------------------------------------------->
     <!-- Icons and Styling -->
     <!--------------------------------------------------------------------->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="./assets/logo/favicon.ico" />
     <link rel="apple-touch-icon" href="./assets/logo/logo192.png" />
     <link rel="manifest" href="/jss.webmanifest" />
