--- a/index.html
+++ b/index.html
@@ -44,8 +44,18 @@
       defer
     ></script>
     <script type="module" src="./scripts/jss.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.12/p5.min.js" integrity="sha512-4bsynQUPmTFQ10bJDS/2TAzrKT28Ou4/403wx5DZByUot2WkxjidOfkxPTHUE3gwNzVdhy1Xe8Z1y/YAgKVhqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.12/addons/p5.dom.js" integrity="sha512-FRX4YATSuGtUdpXR/q2axVIcBpPtPjg83tzAfb8cYDN2heThN/4gNdxQcHWtR9aFLrqBJfKFkl08u0zbgkNrpg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.12/p5.min.js"
+      integrity="sha512-4bsynQUPmTFQ10bJDS/2TAzrKT28Ou4/403wx5DZByUot2WkxjidOfkxPTHUE3gwNzVdhy1Xe8Z1y/YAgKVhqg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.12/addons/p5.dom.js"
+      integrity="sha512-FRX4YATSuGtUdpXR/q2axVIcBpPtPjg83tzAfb8cYDN2heThN/4gNdxQcHWtR9aFLrqBJfKFkl08u0zbgkNrpg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./scripts/elements/background.js"></script>
     <!--------------------------------------------------------------------->
     <!-- Icons and Styling -->
