--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js"
       defer
     ></script>
-    <script type="module" src="./scripts/jss.js" defer></script>
+    <script type="module" src="./built/jss.js" defer></script>
     <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="./assets/logo/favicon.ico" />
     <link rel="apple-touch-icon" href="./assets/logo/logo192.png" />
