--- a/index.html
+++ b/index.html
@@ -26,14 +26,8 @@
       referrerpolicy="no-referrer"
       defer
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/nexusui@latest/dist/NexusUI.js"
-      defer
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js"
-      defer
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/nexusui@latest/dist/NexusUI.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js" defer></script>
     <script type="module" src="./built/jss.js" defer></script>
     <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="./assets/logo/favicon.ico" />
