--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="music, midi, sound, synthesizer, sound-processing, synth, piano, 
       synthesizers, software-synthesizer, subtractive-synthesis, midi-keyboard, 
       fm-synthesizer, piano-keyboard, sound-synthesis, nexusui, frequency-modulation, 
-      tonejs, web-audio, fm-synthesis, sound-engineering"
+      tonejs, web-audio, fm-synthesis, sound-engineering, javascript-synthesizer, typescript"
     />
     <meta name="author" content="Michael Kolesidis" />
     <title>JSS-01 | JavaScript Software Synthesizer</title>
