--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
     />
     <meta name="author" content="Michael Kolesidis" />
     <title>JSS-01 | JavaScript Software Synthesizer</title>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.37/Tone.js"
-      integrity="sha512-gK8OnTXn8cTYkHqYX+bhzjQ1rClAPuG2eMy+oRuV26mSuE0EbZeULFKdyc/YGX1Z/JsC06FXxQttdX4aahjSMQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-      defer
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.min.js" integrity="sha512-Siyxh4gyNM5SaERNa9BOZSPcu/auHyFUWn9OVFD7MxI3/dVPQklE7tfqS+pLmPHF1zo6UdDaJAp/thihrf0c7w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/nexusui@latest/dist/NexusUI.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js" defer></script>
     <script type="module" src="./built/jss.js" defer></script>
