fix: logo filename correction

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script type="module" src="./built/jss.js" defer></script>
     <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="./assets/logo/favicon.ico" />
-    <link rel="apple-touch-icon" href="./assets/logo/logo192.png" />
+    <link rel="apple-touch-icon" href="./assets/logo/logo_192.png" />
     <link rel="manifest" href="/jss.webmanifest" />
   </head>
   <body>
