--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/nexusui@latest/dist/NexusUI.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js" defer></script>
     <script type="module" src="./built/jss.js" defer></script>
+    <script defer data-domain="javascript-software-synthesizer.netlify.app" src="https://plausible.io/js/script.js"></script>
     <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="./assets/logo/favicon.ico" />
     <link rel="apple-touch-icon" href="./assets/logo/logo_192.png" />
