--- a/index.html
+++ b/index.html
@@ -8,27 +8,23 @@
       name="description"
       content="JavaScript Software Synthesizer is a web app enabling you to make 
       and play music in the browser. It is a software synthesizer implementing a 
-      variety of JavaScript frameworks and libraries, such as Tone.js and NexusUI."
+      variety of JavaScript frameworks and libraries, such as Tone.js and NexusUI2."
     />
     <meta
       name="keywords"
       content="music, midi, sound, synthesizer, sound-processing, synth, piano, 
       synthesizers, software-synthesizer, subtractive-synthesis, midi-keyboard, 
-      fm-synthesizer, piano-keyboard, sound-synthesis, nexusui, frequency-modulation, 
+      fm-synthesizer, piano-keyboard, sound-synthesis, nexusui2, frequency-modulation, 
       tonejs, web-audio, fm-synthesis, sound-engineering, javascript-synthesizer, typescript"
     />
     <meta name="author" content="Michael Kolesidis" />
     <title>JSS-01 | JavaScript Software Synthesizer</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.min.js" integrity="sha512-Siyxh4gyNM5SaERNa9BOZSPcu/auHyFUWn9OVFD7MxI3/dVPQklE7tfqS+pLmPHF1zo6UdDaJAp/thihrf0c7w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/nexusui@latest/dist/NexusUI.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js" defer></script>
-    <script type="module" src="./built/jss.js" defer></script>
-    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="./assets/logo/favicon.ico" />
     <link rel="apple-touch-icon" href="./assets/logo/logo_192.png" />
     <link rel="manifest" href="/jss.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/jss.ts"></script>
   </body>
 </html>
